# diy_watch

./: .gitignore  README.md
Firmware/: CMakeLists.txt  README.md  send_time.py
Firmware/include/diy_watch/: RTClib.h  multiplex_lcd_drv.h  time.h  usb_serial.h  version.h
Firmware/src/: RTC_DS3231.cpp  RTClib.cpp  blink_led.c  diy_watch.cpp  lcd_drv.pio  multiplex_lcd.pio  multiplex_lcd_drv.c  multiplex_lcd_drv.cpp  usb_serial.cpp
PCB/binary_watch/: binary_watch.kicad_pcb  binary_watch.kicad_pro  binary_watch.kicad_sch
PCB/diy_watch/: BOM.csv  diy_watch.kicad_pcb  diy_watch.kicad_pro  diy_watch.kicad_sch  fp-lib-table  sym-lib-table  ~diy_watch.kicad_pcb.lck
PCB/diy_watch/symbols/: DIY_Watch_lib.kicad_sym  LTC4071EMS8E_PBF.kicad_sym
PCB/diy_watch/symbols/DIY_Watch_lib.pretty/: 6Dig7SegLCD.kicad_mod  Diptronics FTE-3.kicad_mod  SON50P300X200X60-9N.kicad_mod
test/: ProProject_New Project_2023-12-23_22-51-32_2023-12-23.epro
